@startuml
'https://plantuml.com/class-diagram
left to right direction

class Company{
-designation
}

class VaccinationCenter{
  - name
  - address
  - emailAddress
  - phoneNumber
  - faxNumber
  - websiteAddress
  - openingHours
  - closingHours
  - slotDuration
  - maxVaccines
  - coordinator
}
class WaitingRoom{
  -arrivalDate
  -arrivalHour
  -snsUserNumber
  -scheduledHour
  -vaccinationCenterName
  -vaccineName
 }


Company "1" --> "*" VaccinationCenter : has
VaccinationCenter "1" --> "1" WaitingRoom : has

@enduml